# ai-orchestrator

./: .env.example  .gitignore  README.md  TASK.md  config.yaml  package-lock.json  package.json  pyproject.toml
.cursor/: rules
.cursor/rules/: mcp-routing.mdc
docs/: CONTEXT.md  TODO.md  langgraph-architecture.md  langgraph-patterns.md  langgraph-study-guide.md  mcp-tools-guide.md  testing-guide.md
src/orchestrator/: __init__.py  cli_server.py  config.py  graph.py  models.py  router.py  server.py  state.py
src/orchestrator/cli_server_pkg/: __init__.py  config.py  server.py
src/orchestrator/cli_server_pkg/helpers/: __init__.py  cli.py
src/orchestrator/cli_server_pkg/session/: __init__.py  runners.py
src/orchestrator/cli_server_pkg/tools/: __init__.py  claude.py  gemini.py  orchestrate.py  session_usage.py
src/orchestrator/nodes/: __init__.py  architect.py  classify.py  critique.py  human_review.py  implement.py  research.py  supervisor.py  validator.py
src/orchestrator/prompts/: architect.py
src/orchestrator/providers/: __init__.py
src/orchestrator/tools/: __init__.py
