[project]
name = "ai-orchestrator"
version = "0.1.0"
description = "MCP server that routes tasks to the right AI model — research (Gemini), architect (Claude), classify (Haiku)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "google-genai>=1.65.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-orchestrator = "orchestrator.server:main"
